# amos

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  amos  claude-guardrails.md  commands.go  go.mod  go.sum  main.go  messages.go  model.go  pyproject.toml  update_add_todo.go  update_dashboard.go  update_date_filter.go  update_entries.go  update_entry.go  update_entry_view.go  update_filter_view.go  update_tag_filter.go  update_tag_picker.go  update_todos.go  update_unified_filter.go
.github/: copilot-instructions.md
.github/workflows/: ci.yml
amos/: __init__.py  app.py
internal/helpers/: dates.go  filter_parser.go  sorting.go  sorting_test.go  stats.go  stats_test.go  tags.go  tags_test.go  todos.go  todos_test.go
internal/models/: entry.go  todo.go
internal/storage/: storage.go  storage_test.go
scripts/: README.md  generate_test_data.go  install-hooks.sh
ui/: add_todo_form.go  dashboard.go  dashboard_stats.go  date_filter.go  entry_form.go  entry_list.go  entry_view.go  filter_view.go  styles.go  tag_filter.go  tag_picker.go  todo_list.go  unified_filter.go
