[tool.poetry]
name = "amos"
version = "0.0.1"
description = "Minimal Textual prototype package for fast iteration"
authors = ["apodacaa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^6.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.14.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"